2002-05-16  Bruno Haible  <bruno@clisp.org>

	* sysdeps/unix/sysv/aix/bits/ioctl-types.h: Don't use multiline
	string as argument of #error.

2002-05-15  Ulrich Drepper  <drepper@redhat.com>

	* stdlib/canonicalize.c (canonicalize): Rename to __realpath and
	don't define static.  Remove old __realpath function.  TC1 of
	POSIX 2001 will allow the second parameter to be NULL.
	* stdlib/test-canon.c: Comment out test for NULL as second
	parameter of realpath.

	* time/offtime.c (__offtime): Set errno if overflow is detected.

	* elf/Makefile (rtld-routines): Remove dl-brk and dl-sbrk.
	* sysdeps/unix/sysv/linux/Makefile (sysdep-rtld-routines): Add
	dl-brk and dl-sbrk.

	* sysdeps/sparc/fpu/bits/mathinline.h (fdim): Add __THROW.
	(fdimf): Likewise.

2002-05-15  Roland McGrath  <roland@frob.com>

	* hurd/report-wait.c (_S_msg_report_wait): Use mach_msg_id_t for arg.

2002-05-12  Bruno Haible  <bruno@clisp.org>

	* iconvdata/testdata/EUC-JISX0213: New file.
	* iconvdata/testdata/EUC-JISX0213..UTF8: New file.
	* iconvdata/testdata/SHIFT_JISX0213: New file.
	* iconvdata/testdata/SHIFT_JISX0213..UTF8: New file.
	* iconvdata/testdata/ISO-2022-JP-3: New file.
	* iconvdata/testdata/ISO-2022-JP-3..UTF8: New file.
	* iconvdata/TESTS: Add EUC-JISX0213, SHIFT_JISX0213, ISO-2022-JP-3.
	* iconvdata/run-iconv-test.sh: Skip the charmap test if the charmap
	contains comments indicating precomposed characters.

2002-04-21  Bruno Haible  <bruno@clisp.org>

	* iconvdata/iso-2022-jp-3.c: New file.
	* iconvdata/gconv-modules (ISO-2022-JP-3): New module.
	* iconvdata/Makefile (modules): Add ISO-2022-JP-3.
	(LDFLAGS-ISO-2022-JP-3.so): New variable.
	(ISO-2022-JP-3.so): Depend on libJIS.so and libJISX0213.so.
	(distribute): Add iso-2022-jp-3.c.

2002-05-12  Bruno Haible  <bruno@clisp.org>

	* iconvdata/tst-table-to.c (main): Restore handling of
	transliterations, broken by last patch.

2002-05-12  Bruno Haible  <bruno@clisp.org>

	* iconvdata/TESTS: Add IBM922, IBM1124, IBM1129.
